# py-zensical-theme

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json  zensical.toml
.github/workflows/: docs.yml  release.yml
docs/: custom-theme.md
sidexp_theme/: main.html  mkdocs_theme.yml
sidexp_theme/assets/stylesheets/: sidexp.css
sidexp_theme/partials/: header.html
